--- a/dangerous-frontend/index.html
+++ b/dangerous-frontend/index.html
@@ -9,12 +9,11 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    This is a friendly electron app that link to a very dangerous site
+    We are using Node.js <span id="node-version"></span>,
+    Chromium <span id="chrome-version"></span>,
+    and Electron <span id="electron-version"></span>.
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
-    <p>
-      <a href="https://dangerous-electron-frontend.onrender.com">⚠️ Link to danger ⚠️</a>
-    </p>
   </body>
 </html>
