--- a/dangerous-frontend/index.html
+++ b/dangerous-frontend/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <link href="./styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+    <h1>LOL!</h1>
+    <h1><del>All</del> Some of your secrets have been stolen</h1>
+    <img src="hacker-cat.png">
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
