Fix the secret stealing code

--- a/dangerous-frontend/index.html
+++ b/dangerous-frontend/index.html
@@ -5,12 +5,15 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
     <link href="styles.css" rel="stylesheet">
-    <title>Hello World!</title>
+    <title>Welcome fool</title>
   </head>
   <body>
-    <h1>LOL!</h1>
-    <h1><del>All</del> Some of your secrets have been stolen</h1>
-    <img src="hacker-cat.png">
+    <div class="handle"></div>
+    <div class="content">
+      <h1>LOL!</h1>
+      <h1><del>All</del> Some of your secrets have been stolen</h1>
+      <img src="hacker-cat.png">
+    </div>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
