Update styling of desktop app

--- a/index.html
+++ b/index.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <link href="./styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Kitten world</title>
   </head>
   <body>
-    <style>
-      body {
-        background-color: #188635;
-        color: #DDD;
-        font-family: Helvetica, Sans-Serif;
-        text-align: center;
-        font-size: 16px;
-        margin-top: 30px;
-      }
-      img {
-        height: 480px;
-        margin: auto;
-      }
-    </style>
-
     <h2>Click on the kitten to enter</h2>
     <a href="https://dangerous-electron-frontend.onrender.com">
       <img src="images/kitten-photo.jpeg">
